--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,16 @@
             <artifactId>clickhouse-jdbc</artifactId>
             <version>0.4.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
 
     </dependencies>
 
