--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>uz.test</groupId>
-    <artifactId>Test</artifactId>
+    <artifactId>Edu</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
